# sunfish_control

./: .gitignore  LICENSE  README.md  instal_dep_packages.sh
sunfish_camera/: CMakeLists.txt  package.xml
sunfish_camera/msg/: Status.msg
sunfish_camera/src/: camera.py
sunfish_camera/srv/: Record.srv  Stream.srv
sunfish_control/: CMakeLists.txt  package.xml
sunfish_ecu/: CMakeLists.txt  package.xml
sunfish_ecu/config/: output_map.yaml
sunfish_ecu/launch/: run.launch  test.launch
sunfish_ecu/msg/: Depth.msg  INS.msg  MagField.msg  Power.msg  Status.msg
sunfish_ecu/src/: ComsPacket.cpp  ComsPacket.h  HardwareComs.cpp  HardwareComs.h  SensorHandler.cpp  SensorHandler.h  USB_coms.h  VectorMap.cpp  VectorMap.h  ecu_driver.cpp  outputChannel.cpp  outputChannel.h
sunfish_ecu/srv/: setPWM.srv
sunfish_ecu/test/: test_ComsPacket.cpp  test_SensorHandler.cpp  test_VectorMap.cpp  test_outputChannel.cpp  utest.cpp
sunfish_joypad/: CMakeLists.txt  package.xml
sunfish_joypad/launch/: joypad.launch
sunfish_joypad/src/: JoypadMain.cpp
sunfish_joypad/test/: utest.cpp
sunfish_lighting/: CMakeLists.txt  package.xml
sunfish_lighting/launch/: lighting.launch
sunfish_lighting/msg/: Status.msg
sunfish_lighting/src/: lighting.py
sunfish_lighting/srv/: OnOff.srv
