<?xml version="1.0"?>
<package>
  <name>sunfish_joypad</name>
  <version>0.0.1</version>
  <description>The Sunfish package</description>
  <maintainer email="ThomasBurns88@gmail.com">Thomas Burns</maintainer>
  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sunfish_ecu</build_depend>

  <run_depend>message_runtime</run_depend>
  <test_depend>gtest</test_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sunfish_ecu</run_depend>

  <export>
  </export>
</package>
